// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`metric reducer should handle END_METRIC_LOADING 1`] = `
Object {
  "test.service": Object {
    "http_codes": Object {
      "data": Object {
        "1524758640000": Object {
          "200": 426,
          "204": 8,
          "301": 40,
          "302": 3,
          "404": 40,
        },
        "1524758700000": Object {
          "200": 2566,
          "204": 75,
          "301": 239,
          "302": 4,
          "304": 4,
          "404": 227,
        },
        "1524758760000": Object {
          "200": 2365,
          "204": 66,
          "301": 270,
          "302": 7,
          "304": 3,
          "404": 247,
        },
        "1524758820000": Object {
          "200": 2624,
          "204": 80,
          "301": 281,
          "302": 12,
          "304": 20,
          "404": 240,
          "502": 1,
        },
        "1524758880000": Object {
          "200": 3368,
          "204": 109,
          "301": 330,
          "302": 13,
          "304": 4,
          "404": 293,
          "502": 1,
        },
        "1524758940000": Object {
          "200": 2359,
          "204": 75,
          "301": 225,
          "302": 13,
          "404": 193,
        },
        "1524759000000": Object {
          "200": 2454,
          "204": 93,
          "301": 197,
          "302": 15,
          "404": 170,
        },
        "1524759060000": Object {
          "200": 2805,
          "204": 92,
          "301": 265,
          "302": 13,
          "304": 2,
          "404": 233,
        },
        "1524759120000": Object {
          "200": 2806,
          "204": 87,
          "301": 230,
          "302": 12,
          "304": 6,
          "404": 213,
        },
        "1524759180000": Object {
          "200": 2368,
          "204": 85,
          "301": 182,
          "302": 11,
          "304": 1,
          "404": 173,
        },
        "1524759240000": Object {
          "200": 2797,
          "204": 100,
          "301": 232,
          "302": 20,
          "304": 7,
          "404": 206,
        },
        "1524759300000": Object {
          "200": 2421,
          "204": 80,
          "301": 214,
          "302": 14,
          "304": 3,
          "404": 197,
        },
        "1524759360000": Object {
          "200": 2311,
          "204": 80,
          "301": 194,
          "302": 13,
          "304": 6,
          "404": 183,
        },
        "1524759420000": Object {
          "200": 2471,
          "204": 86,
          "301": 277,
          "302": 11,
          "304": 3,
          "404": 264,
        },
        "1524759480000": Object {
          "200": 3478,
          "204": 119,
          "301": 378,
          "302": 22,
          "304": 3,
          "404": 355,
        },
        "1524759540000": Object {
          "200": 2321,
          "204": 77,
          "301": 212,
          "302": 11,
          "404": 198,
        },
      },
      "loaded": true,
      "loading": false,
    },
  },
}
`;

exports[`metric reducer should handle END_SERVICE_LOADING 1`] = `
Object {
  "123": Object {
    "adblock_apps_proportions": Object {
      "loaded": false,
      "loading": false,
    },
    "bamboozled_by_app": Object {
      "loaded": false,
      "loading": false,
    },
    "bamboozled_by_bro": Object {
      "loaded": false,
      "loading": false,
    },
    "fetch_timings": Object {
      "loaded": false,
      "loading": false,
    },
    "http_codes": Object {
      "loaded": false,
      "loading": false,
    },
    "http_errors_domain_type": Object {
      "loaded": false,
      "loading": false,
    },
  },
  "test.second.service": Object {
    "bamboozled_by_app": Object {
      "loaded": false,
      "loading": true,
      "range": 330,
    },
    "bamboozled_by_bro": Object {
      "loaded": false,
      "loading": false,
      "range": 330,
    },
    "http_codes": Object {
      "data": Object {
        "1524759180000": Object {
          "200": 2368,
          "204": 85,
          "301": 182,
        },
        "1524759240000": Object {
          "200": 2797,
          "204": 100,
          "301": 232,
        },
      },
      "loaded": true,
      "loading": false,
      "range": 330,
    },
  },
  "test.service": Object {
    "http_codes": Object {
      "data": Object {
        "1524759180000": Object {
          "200": 2368,
          "204": 85,
          "301": 182,
          "302": 11,
          "304": 1,
          "404": 173,
        },
        "1524759240000": Object {
          "200": 2797,
          "204": 100,
          "301": 232,
          "302": 20,
          "304": 7,
          "404": 206,
        },
      },
      "loaded": true,
      "loading": false,
      "range": 10,
    },
  },
}
`;

exports[`metric reducer should handle END_SERVICE_LOADING and store should not changed 1`] = `
Object {
  "test.second.service": Object {
    "bamboozled_by_app": Object {
      "loaded": false,
      "loading": true,
      "range": 330,
    },
    "bamboozled_by_bro": Object {
      "loaded": false,
      "loading": false,
      "range": 330,
    },
    "http_codes": Object {
      "data": Object {
        "1524759180000": Object {
          "200": 2368,
          "204": 85,
          "301": 182,
        },
        "1524759240000": Object {
          "200": 2797,
          "204": 100,
          "301": 232,
        },
      },
      "loaded": true,
      "loading": false,
      "range": 330,
    },
  },
  "test.service": Object {
    "http_codes": Object {
      "data": Object {
        "1524759180000": Object {
          "200": 2368,
          "204": 85,
          "301": 182,
          "302": 11,
          "304": 1,
          "404": 173,
        },
        "1524759240000": Object {
          "200": 2797,
          "204": 100,
          "301": 232,
          "302": 20,
          "304": 7,
          "404": 206,
        },
      },
      "loaded": true,
      "loading": false,
      "range": 10,
    },
  },
}
`;

exports[`metric reducer should handle START_METRIC_LOADING 1`] = `
Object {
  "test.service": Object {
    "http_codes": Object {
      "loaded": false,
      "loading": true,
      "range": 336,
    },
  },
}
`;

exports[`metric reducer should handle START_METRIC_LOADING and remove data from store 1`] = `
Object {
  "test.second.service": Object {
    "bamboozled_by_app": Object {
      "loaded": false,
      "loading": true,
      "range": 330,
    },
    "bamboozled_by_bro": Object {
      "loaded": false,
      "loading": false,
      "range": 330,
    },
    "http_codes": Object {
      "data": Object {
        "1524759180000": Object {
          "200": 2368,
          "204": 85,
          "301": 182,
        },
        "1524759240000": Object {
          "200": 2797,
          "204": 100,
          "301": 232,
        },
      },
      "loaded": true,
      "loading": false,
      "range": 330,
    },
  },
  "test.service": Object {
    "http_codes": Object {
      "loaded": false,
      "loading": true,
      "range": 336,
    },
  },
}
`;

exports[`metric reducer should return the initial state 1`] = `Object {}`;
